# cirruspad

./: .gitignore  CLASSES.md  CMakeLists.txt  CreateItemDialog.qml  Dashboard.qml  FileView.qml  Main.qml  NoteView.qml  README.md  RenameDialog.qml  Sidebar.qml  TodoView.qml  Workspace.qml  WorkspaceLoader.qml  deploy_wasm.sh  file.cpp  file.h  filenode.h  filesystemmodel.cpp  filesystemmodel.h  filesystemnode.cpp  filesystemnode.h  filesystemtypes.h  foldernode.cpp  foldernode.h  main.cpp  maincontroller.cpp  maincontroller.h  notefile.cpp  notefile.h  notenode.cpp  notenode.h  todofile.cpp  todofile.h  todonode.cpp  todonode.h
docs/: appcirruspad.js  index.html
